refactor(upcloud): remove opinionated changes

--- a/styles/upcloud/catppuccin.user.less
+++ b/styles/upcloud/catppuccin.user.less
@@ -32,50 +32,48 @@
     #lib.palette();
     #lib.defaults();
 
-    // Border radius variables
-    @border-radius: 0.5rem;
-    @border-radius-small: 0.25rem;
-    @border-radius-large: 1rem;
 
-    --white: @mantle !important;
-    --primary: @accent !important;
-    --strawberry: @red !important;
-    --card-border: @surface1 !important;
-    --background-body: @mantle !important;
+
+    --white: @mantle;
+    --primary: @accent ;
+    --strawberry: @red ;
+    --card-border: @surface1 ;
+    --background-body: @mantle ;
     /* uikit (components) */
-    --uikit-black: @text !important;
-    --uikit-danger: @red !important;
-    --uikit-grey: @subtext0 !important;
-    --uikit-grey-card-border: @surface0 !important;
-    --uikit-grey-border: @surface1 !important;
-    --uikit-grey-disabled-text: @subtext1 !important;
-    --uikit-disabled-border: @overlay0 !important;
-    --uikit-grey-light: @surface1 !important;
-    --uikit-grey-bg: @base !important;
-    --uikit-neutral: @surface1 !important;
-    --uikit-primary: @accent !important;
-    --uikit-primary-foreground: @base !important;
-    --uikit-white: @mantle !important;
-    --uikit-black-light: @subtext0 !important;
-    --uikit-grey-lighter: @surface0 !important;
-    --uikit-destructive: @red !important;
-    --uikit-progressbar-bg: @surface0 !important;
-    --uikit-success: @green !important;
-    --uikit-warning: @yellow !important;
+    --uikit-black: @text ;
+    --uikit-danger: @red ;
+    --uikit-grey: @subtext0 ;
+    --uikit-grey-card-border: @surface0 ;
+    --uikit-grey-border: @surface1 ;
+    --uikit-grey-disabled-text: @subtext1 ;
+    --uikit-disabled-border: @overlay0 ;
+    --uikit-grey-light: @surface1 ;
+    --uikit-grey-bg: @base ;
+    --uikit-neutral: @surface1 ;
+    --uikit-primary: @accent ;
+    --uikit-primary-foreground: @base ;
+    --uikit-white: @mantle ;
+    --uikit-black-light: @subtext0 ;
+    --uikit-grey-lighter: @surface0 ;
+    --uikit-destructive: @red ;
+    --uikit-progressbar-bg: @surface0 ;
+    --uikit-success: @green ;
+    --uikit-warning: @yellow ;
     /* highlights */
-    --highlight-default: @accent !important;
+    --highlight-default: @accent ;
     /* borders */
-    --border-grey: @surface0 !important;
-    --border-light-grey: @surface1 !important;
-    --borderGrey: @surface0 !important;
+    --border-grey: @surface0 ;
+    --border-light-grey: @surface1 ;
+    --borderGrey: @surface0 ;
     /* text */
-    --text-semi-dark: @subtext1 !important;
-    --text-body: @text !important;
-    --text-white: @base !important;
-    --tag-background: @surface0 !important;
-    --text-lighter: @subtext0 !important;
-    --text-grey: @subtext0 !important;
-    --text-light: @subtext0 !important;
+    --text-semi-dark: @subtext1;
+    --text-body: @text ;
+    --text-white: @base ;
+    --tag-background: @surface0;
+    --text-lighter: @subtext0;
+    --text-grey: @subtext0;
+    --text-light: @subtext0;
+    --black: @text;
 
     /* badges */
     [class*="HeaderBadge_badge--danger"] [class*="HeaderBadge_badge__button"] {
@@ -104,24 +102,12 @@
     }
 
     /* Popover */
-    [class*="Popover_menu"],
-    .Phoenix__Select__Select__menu,
-    [class*="menu"],
-    .selector-list-wrapper {
-      border-radius: @border-radius;
-      opacity: 0;
-      transform: translateY(-10px);
-      animation: modalCardFadeIn 0.15s forwards;
-    }
-
     .selector-list-wrapper {
       background-color: @crust !important;
     }
 
     .selector-list-wrapper .selector-wrapper {
       background-color: transparent !important;
-      transition: background-color 0.1s ease;
-      border-radius: @border-radius;
 
       &:hover {
         background-color: @surface0 !important;
@@ -138,19 +124,9 @@
       background: transparent !important;
     }
 
-    @keyframes popoverFadeIn {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    [class*="Popover_item"]:not([class*="Popover_disabledItem"]):hover
-      [class*="Popover_itemContent"] {
+    [class*="Popover_item"]:not([class*="Popover_disabledItem"]):hover [class*="Popover_itemContent"] {
       background-color: fade(white, 5%);
       color: @accent;
-      transition: background 0.2s, color 0.2s;
-      border-radius: @border-radius;
     }
 
     // "info boxes"
@@ -216,9 +192,6 @@
     .Phoenix--Button__primary {
       background-color: @accent !important;
       color: @base !important;
-      border-radius: @border-radius;
-
-      transition: opacity 0.3s ease;
 
       &:hover {
         opacity: 80%;
@@ -228,9 +201,6 @@
     .Phoenix--Button__destructive {
       background-color: @red !important;
       color: @base !important;
-      border-radius: @border-radius;
-
-      transition: background-color 0.2s ease;
 
       &:hover {
         background-color: fade(@red, 80%) !important;
@@ -239,13 +209,8 @@
 
     .Phoenix--Button__outlined,
     .Phoenix__Alert__button {
-      border-radius: @border-radius;
       border-color: @surface0;
-      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 
-      svg path {
-        transition: fill 0.2s, color 0.2s;
-      }
 
       &:active,
       &:hover {
@@ -267,9 +232,6 @@
       color: @text !important;
     }
 
-    .Phoenix__MiniButton {
-      transition: border-color 0.1s ease;
-    }
 
     .expired-session__modal .Phoenix__CardHead {
       background-color: @accent !important;
@@ -284,43 +246,21 @@
     /* modals */
     // Only apply transition/animation for modal cards
     .Phoenix--Modal {
-      transition:
-        box-shadow 0.2s,
-        border-radius 0.2s,
-        opacity 0.2s,
-        transform 0.2s;
       opacity: 0;
-      transform: translateY(20px);
-      animation: modalCardFadeIn 0.3s forwards;
-    }
-
-    @keyframes modalCardFadeIn {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
     }
 
     .Phoenix__CardHead {
       color: @text !important;
       border-bottom: 0.5px solid @surface0 !important;
-      border-radius: @border-radius @border-radius 0 0;
 
-      &.Phoenix__CardHead--collapsed {
-        border-radius: @border-radius;
-      }
     }
 
-    .Phoenix--Modal__content .Phoenix__Card {
-      box-shadow: none;
-      border-radius: @border-radius;
-    }
 
     .Phoenix__Card {
       border: 0.5px solid @surface0 !important;
     }
 
-    .Phoenix__CardDataRow__Cell + .Phoenix__CardDataRow__Cell {
+    .Phoenix__CardDataRow__Cell+.Phoenix__CardDataRow__Cell {
       border-left: 0.5px solid @surface0;
     }
 
@@ -329,7 +269,7 @@
     }
 
     /* cards */
-    .card-section + .card-section,
+    .card-section+.card-section,
     .card-section,
     .footer-wrapper,
     .templates .Phoenix__SortableTable__Row td {
@@ -341,9 +281,6 @@
       color: @text !important;
     }
 
-    .Phoenix__Card {
-      border-radius: @border-radius;
-    }
 
     /* state indicators */
     .state-indicator--green {
@@ -390,8 +327,6 @@
     .checkbox,
     .Phoenix__Checkbox__icon {
       background-color: @surface0;
-      border-radius: @border-radius-small;
-      transition: all 0.2s ease;
       border-color: @surface1;
 
       &.checked,
@@ -406,7 +341,6 @@
 
       &::before {
         border: 2px solid @overlay2;
-        border-radius: @border-radius-small;
       }
 
       &::after {
@@ -433,9 +367,7 @@
 
     .dropdown {
       background: @base;
-      border-radius: @border-radius;
       border: 1px solid @surface0;
-      box-shadow: none;
       color: @text;
     }
 
@@ -445,14 +377,12 @@
     }
 
     /* radio inputs */
-    input:checked + .Phoenix--Radio__glyph::after {
+    input:checked+.Phoenix--Radio__glyph::after {
       background: transparent !important;
     }
 
-    .Phoenix__RadioCard > label {
+    .Phoenix__RadioCard>label {
       border: 0.5px solid @surface0 !important;
-      border-radius: @border-radius !important;
-      transition: border-color 0.2s ease, background-color 0.2s ease;
     }
 
     /* text inputs */
@@ -462,12 +392,11 @@
     }
 
     /* tables */
-    :not(.Phoenix__SortableTable.Phoenix__SortableTable--separated)
-      > .Phoenix__SortableTable__Body {
+    :not(.Phoenix__SortableTable.Phoenix__SortableTable--separated)>.Phoenix__SortableTable__Body {
       background: @mantle !important;
       color: @text !important;
 
-      & > * {
+      &>* {
         --uikit-grey-border: @surface0 !important;
       }
     }
@@ -475,7 +404,7 @@
     /* sidebar */
 
     .Phoenix__Sidebar__Head .logo {
-      filter: if(@flavor = latte, none, brightness(0) invert(1));
+      filter: if(@flavor =latte, none, brightness(0) invert(1));
     }
 
     .Phoenix__Sidebar__NavItem,
@@ -510,8 +439,7 @@
     }
 
     .dashboard-card:not(.dashboard-card-disabled):hover .dashboard-card-icon,
-    .dashboard-card:not(.dashboard-card-disabled):focus-visible
-      .dashboard-card-icon {
+    .dashboard-card:not(.dashboard-card-disabled):focus-visible .dashboard-card-icon {
       color: @accent !important;
     }
 
@@ -534,7 +462,6 @@
       background-color: @mantle;
       border: 0.1px solid @surface0;
       color: @text;
-      transition: color 0.2s ease, border-color 0.2s ease;
 
       &:hover {
         border-color: @accent !important;
@@ -555,10 +482,6 @@
       &.dashboard-card {
         border: 0.1px solid @surface0;
       }
-
-      &.dashboard-card {
-        transition: color 0.2s ease, border-color 0.2s ease;
-      }
     }
 
     .card-header {
@@ -578,7 +501,6 @@
     .card-item {
       background-color: @mantle;
       color: @text;
-      transition: color 0.2s ease, border-color 0.2s ease;
 
       &:hover {
         border-color: @accent !important;
@@ -615,6 +537,10 @@
     // news cards
     .header-title {
       color: @accent;
+    }
+
+    [class^="NewsFeed_card_"] {
+      background-color: @mantle;
     }
 
     // header dots
@@ -666,7 +592,6 @@
       background-color: @surface0 !important;
       border: 0.05px solid @surface1 !important;
       color: @text !important;
-      border-radius: @border-radius-small;
     }
 
     .Phoenix__Tooltip2__content svg {
@@ -701,10 +626,6 @@
       stroke: @surface0 !important;
     }
 
-    /* server list */
-    [class*="serverListItemCard"] {
-      border-radius: @border-radius;
-    }
 
     .sort-desc::after {
       // for sorting items
@@ -720,7 +641,6 @@
     .summary,
     .server-summary {
       background-color: @crust;
-      border-radius: @border-radius;
     }
 
     .summary-totals {
@@ -753,19 +673,10 @@
       color: @text !important;
     }
 
-    .plan .Phoenix__RadioCard:not(.Phoenix__RadioCard--disabled) > label,
-    .Phoenix__SortableTable__Row.hilite-on-hover + .expandable-row__details td,
-    .Phoenix__SortableTable__Row.hilite-on-hover td {
-      transition: border-color 0.2s ease;
-    }
-
-    .plan .Phoenix__RadioCard:not(.Phoenix__RadioCard--disabled):hover > label,
-    .Phoenix__SortableTable__Row.hilite-on-hover:hover
-      + .expandable-row__details
-      td,
+    .plan .Phoenix__RadioCard:not(.Phoenix__RadioCard--disabled):hover>label,
+    .Phoenix__SortableTable__Row.hilite-on-hover:hover+.expandable-row__details td,
     .Phoenix__SortableTable__Row.hilite-on-hover:hover td {
       border-color: @accent !important;
-      transition: border-color 0.2s ease;
     }
 
     .plan-column:not(:last-child) {
@@ -779,11 +690,9 @@
     .plan.selected {
       background-color: @mantle !important;
       border: 0.5px solid @accent !important;
-      border-radius: @border-radius !important;
     }
 
     .gpu-quota-row {
-      border-radius: @border-radius;
       color: @text !important;
       background-color: rgba(123, 0, 255, 0.05);
     }
@@ -828,8 +737,7 @@
 
     /* referral */
     .overlay {
-      background: linear-gradient(fade(@base, 85%) 0%, fade(@base, 95%) 100%)
-        !important;
+      background: linear-gradient(fade(@base, 85%) 0%, fade(@base, 95%) 100%) !important;
     }
 
     [class*="ReferralProgram"][class*="disabledTextContainer"],
@@ -865,7 +773,7 @@
 
     .billing-graph img {
       /* Apply filter to match @base color for dark themes */
-      filter: if(@flavor = latte, none, brightness(0) invert(1)) !important;
+      filter: if(@flavor =latte, none, brightness(0) invert(1)) !important;
       opacity: 0.15;
     }
 
@@ -879,9 +787,7 @@
     }
 
     /* backups */
-    .Phoenix__SortableTable__Row.hilite-on-hover:hover
-      + .expandable-row__details
-      td {
+    .Phoenix__SortableTable__Row.hilite-on-hover:hover+.expandable-row__details td {
       border-top-color: var(--uikit-grey-border) !important;
     }
 
@@ -911,7 +817,7 @@
 
     .logo,
     .image-wrapper {
-      filter: if(@flavor = latte, none, brightness(0) invert(1));
+      filter: if(@flavor =latte, none, brightness(0) invert(1));
       color: @text !important;
     }
 
