fix(upcloud): deno fmt

--- a/styles/upcloud/catppuccin.user.less
+++ b/styles/upcloud/catppuccin.user.less
@@ -32,43 +32,41 @@
     #lib.palette();
     #lib.defaults();
 
-
-
     --white: @mantle;
-    --primary: @accent ;
-    --strawberry: @red ;
-    --card-border: @surface1 ;
-    --background-body: @mantle ;
+    --primary: @accent;
+    --strawberry: @red;
+    --card-border: @surface1;
+    --background-body: @mantle;
     /* uikit (components) */
-    --uikit-black: @text ;
-    --uikit-danger: @red ;
-    --uikit-grey: @subtext0 ;
-    --uikit-grey-card-border: @surface0 ;
-    --uikit-grey-border: @surface1 ;
-    --uikit-grey-disabled-text: @subtext1 ;
-    --uikit-disabled-border: @overlay0 ;
-    --uikit-grey-light: @surface1 ;
-    --uikit-grey-bg: @base ;
-    --uikit-neutral: @surface1 ;
-    --uikit-primary: @accent ;
-    --uikit-primary-foreground: @base ;
-    --uikit-white: @mantle ;
-    --uikit-black-light: @subtext0 ;
-    --uikit-grey-lighter: @surface0 ;
-    --uikit-destructive: @red ;
-    --uikit-progressbar-bg: @surface0 ;
-    --uikit-success: @green ;
-    --uikit-warning: @yellow ;
+    --uikit-black: @text;
+    --uikit-danger: @red;
+    --uikit-grey: @subtext0;
+    --uikit-grey-card-border: @surface0;
+    --uikit-grey-border: @surface1;
+    --uikit-grey-disabled-text: @subtext1;
+    --uikit-disabled-border: @overlay0;
+    --uikit-grey-light: @surface1;
+    --uikit-grey-bg: @base;
+    --uikit-neutral: @surface1;
+    --uikit-primary: @accent;
+    --uikit-primary-foreground: @base;
+    --uikit-white: @mantle;
+    --uikit-black-light: @subtext0;
+    --uikit-grey-lighter: @surface0;
+    --uikit-destructive: @red;
+    --uikit-progressbar-bg: @surface0;
+    --uikit-success: @green;
+    --uikit-warning: @yellow;
     /* highlights */
-    --highlight-default: @accent ;
+    --highlight-default: @accent;
     /* borders */
-    --border-grey: @surface0 ;
-    --border-light-grey: @surface1 ;
-    --borderGrey: @surface0 ;
+    --border-grey: @surface0;
+    --border-light-grey: @surface1;
+    --borderGrey: @surface0;
     /* text */
     --text-semi-dark: @subtext1;
-    --text-body: @text ;
-    --text-white: @base ;
+    --text-body: @text;
+    --text-white: @base;
     --tag-background: @surface0;
     --text-lighter: @subtext0;
     --text-grey: @subtext0;
@@ -124,7 +122,8 @@
       background: transparent !important;
     }
 
-    [class*="Popover_item"]:not([class*="Popover_disabledItem"]):hover [class*="Popover_itemContent"] {
+    [class*="Popover_item"]:not([class*="Popover_disabledItem"]):hover
+      [class*="Popover_itemContent"] {
       background-color: fade(white, 5%);
       color: @accent;
     }
@@ -211,7 +210,6 @@
     .Phoenix__Alert__button {
       border-color: @surface0;
 
-
       &:active,
       &:hover {
         background-color: @accent !important;
@@ -232,7 +230,6 @@
       color: @text !important;
     }
 
-
     .expired-session__modal .Phoenix__CardHead {
       background-color: @accent !important;
       color: @base !important;
@@ -252,15 +249,13 @@
     .Phoenix__CardHead {
       color: @text !important;
       border-bottom: 0.5px solid @surface0 !important;
-
     }
-
 
     .Phoenix__Card {
       border: 0.5px solid @surface0 !important;
     }
 
-    .Phoenix__CardDataRow__Cell+.Phoenix__CardDataRow__Cell {
+    .Phoenix__CardDataRow__Cell + .Phoenix__CardDataRow__Cell {
       border-left: 0.5px solid @surface0;
     }
 
@@ -269,7 +264,7 @@
     }
 
     /* cards */
-    .card-section+.card-section,
+    .card-section + .card-section,
     .card-section,
     .footer-wrapper,
     .templates .Phoenix__SortableTable__Row td {
@@ -280,7 +275,6 @@
     .Phoenix__CardDataRow__Cell__value {
       color: @text !important;
     }
-
 
     /* state indicators */
     .state-indicator--green {
@@ -377,11 +371,11 @@
     }
 
     /* radio inputs */
-    input:checked+.Phoenix--Radio__glyph::after {
+    input:checked + .Phoenix--Radio__glyph::after {
       background: transparent !important;
     }
 
-    .Phoenix__RadioCard>label {
+    .Phoenix__RadioCard > label {
       border: 0.5px solid @surface0 !important;
     }
 
@@ -392,11 +386,12 @@
     }
 
     /* tables */
-    :not(.Phoenix__SortableTable.Phoenix__SortableTable--separated)>.Phoenix__SortableTable__Body {
+    :not(.Phoenix__SortableTable.Phoenix__SortableTable--separated)
+      > .Phoenix__SortableTable__Body {
       background: @mantle !important;
       color: @text !important;
 
-      &>* {
+      & > * {
         --uikit-grey-border: @surface0 !important;
       }
     }
@@ -404,7 +399,7 @@
     /* sidebar */
 
     .Phoenix__Sidebar__Head .logo {
-      filter: if(@flavor =latte, none, brightness(0) invert(1));
+      filter: if(@flavor = latte, none, brightness(0) invert(1));
     }
 
     .Phoenix__Sidebar__NavItem,
@@ -439,7 +434,8 @@
     }
 
     .dashboard-card:not(.dashboard-card-disabled):hover .dashboard-card-icon,
-    .dashboard-card:not(.dashboard-card-disabled):focus-visible .dashboard-card-icon {
+    .dashboard-card:not(.dashboard-card-disabled):focus-visible
+      .dashboard-card-icon {
       color: @accent !important;
     }
 
@@ -626,7 +622,6 @@
       stroke: @surface0 !important;
     }
 
-
     .sort-desc::after {
       // for sorting items
       border-top-color: @accent !important;
@@ -673,8 +668,10 @@
       color: @text !important;
     }
 
-    .plan .Phoenix__RadioCard:not(.Phoenix__RadioCard--disabled):hover>label,
-    .Phoenix__SortableTable__Row.hilite-on-hover:hover+.expandable-row__details td,
+    .plan .Phoenix__RadioCard:not(.Phoenix__RadioCard--disabled):hover > label,
+    .Phoenix__SortableTable__Row.hilite-on-hover:hover
+      + .expandable-row__details
+      td,
     .Phoenix__SortableTable__Row.hilite-on-hover:hover td {
       border-color: @accent !important;
     }
@@ -737,7 +734,8 @@
 
     /* referral */
     .overlay {
-      background: linear-gradient(fade(@base, 85%) 0%, fade(@base, 95%) 100%) !important;
+      background: linear-gradient(fade(@base, 85%) 0%, fade(@base, 95%) 100%)
+        !important;
     }
 
     [class*="ReferralProgram"][class*="disabledTextContainer"],
@@ -773,7 +771,7 @@
 
     .billing-graph img {
       /* Apply filter to match @base color for dark themes */
-      filter: if(@flavor =latte, none, brightness(0) invert(1)) !important;
+      filter: if(@flavor = latte, none, brightness(0) invert(1)) !important;
       opacity: 0.15;
     }
 
@@ -787,7 +785,9 @@
     }
 
     /* backups */
-    .Phoenix__SortableTable__Row.hilite-on-hover:hover+.expandable-row__details td {
+    .Phoenix__SortableTable__Row.hilite-on-hover:hover
+      + .expandable-row__details
+      td {
       border-top-color: var(--uikit-grey-border) !important;
     }
 
@@ -817,7 +817,7 @@
 
     .logo,
     .image-wrapper {
-      filter: if(@flavor =latte, none, brightness(0) invert(1));
+      filter: if(@flavor = latte, none, brightness(0) invert(1));
       color: @text !important;
     }
 
