Push a bunch of changes to fix some specificities again.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -99,7 +99,6 @@
     :not(
       img,
       svg,
-      svg *,
       video,
       .notificationDot
     ) {
@@ -240,7 +239,7 @@
     }
 
     // BASE OVERRIDES
-    :is(.iiSXNi, .ewnLhi) > .formLabel .formField + svg,
+    :is(.iiSXNi, .ewnLhi) > .formLabel .formField + :is(svg, img),
     [class*="MyVSONAsSection__GuestContainer-sc"] p,
     .eINUqO > .formLabel .downArrow,
     .hLuxbv :is(.alertMessageTextContainer, .alertMessageIconContainer) {
@@ -315,8 +314,7 @@
     }
 
     // VGEN'S STYLISED LINKS
-    ul.subLinks > li > a > p,
-    li > a {
+    ul.subLinks > li > a > p {
       color: @text !important;
 
       span {
@@ -330,7 +328,7 @@
           color: @accent !important;
         }
 
-        svg, svg *, img {
+        svg, img {
           path, path[fill] {
             fill: @accent !important;
           }
@@ -360,7 +358,7 @@
 
     .reviewStatsContainer {
       .reviewStats {
-        svg {
+        svg, img {
           path, path[fill] {
             fill: @text !important;
           }
@@ -384,7 +382,7 @@
           color: @text !important;
         }
 
-        svg {
+        svg, img {
           path, path[fill] {
             fill: @text !important;
           }
@@ -397,7 +395,7 @@
 
       &:hover {
         .reviewStats {
-          svg {
+          svg, img {
             path, path[fill] {
               fill: @accent !important;
             }
@@ -421,7 +419,7 @@
             color: @accent !important;
           }
 
-          svg {
+          svg, img {
             path, path[fill] {
               fill: @accent !important;
             }
@@ -544,7 +542,7 @@
           color: @text !important;
         }
 
-        svg {
+        svg, img {
           path, path[fill] {
             fill: @text !important;
           }
@@ -559,7 +557,7 @@
             color: @accent !important;
           }
 
-          svg {
+          svg, img {
             path, path[fill] {
               fill: @accent !important;
             }
@@ -601,7 +599,7 @@
         color: @base !important;
       }
 
-      svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -619,7 +617,7 @@
         color: @subtext0 !important;
       }
 
-      svg {
+      svg, img {
         path, path[fill] {
           fill: @subtext0 !important;
         }
@@ -648,7 +646,7 @@
           color: darken(@accent, 5%) !important;
         }
 
-        svg {
+        svg, img {
           path, path[fill] {
             fill: darken(@accent, 5%) !important;
           }
@@ -850,7 +848,7 @@
         color: @base !important;
       }
 
-      svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -911,7 +909,7 @@
             color: @base !important;
           }
 
-          svg {
+          svg, img {
             path, path[fill] {
               fill: @base !important;
             }
@@ -938,7 +936,7 @@
           color: @base !important;
         }
 
-        svg {
+        svg, img {
           path, path[fill] {
             fill: @base !important;
           }
@@ -961,7 +959,7 @@
           color: @text !important;
         }
 
-        svg {
+        svg, img {
           path, path[fill] {
             fill: @text !important;
           }
@@ -1008,7 +1006,7 @@
         color: @text !important;
       }
 
-      svg {
+      svg, img {
         path, path[fill] {
           fill: @text !important;
         }
@@ -1035,7 +1033,7 @@
           color: @base !important;
         }
 
-        svg {
+        svg, img {
           path, path[fill] {
             fill: @base !important;
           }
@@ -1069,7 +1067,7 @@
             color: @text !important;
           }
 
-          svg {
+          svg, img {
             path, path[fill] {
               fill: @text !important;
             }
@@ -1100,7 +1098,7 @@
             color: @base !important;
           }
 
-          svg {
+          svg, img {
             path, path[fill] {
               fill: @base !important;
             }
@@ -1440,17 +1438,17 @@
     // GRADIENT ELEMENTS
     .iTTtOu,
     .cNicqu,
-    .fxdoUV .mainContentContainer > .mainContent .bannerContainer .statusBanner,
+    .mainContentContainer > .mainContent .bannerContainer .statusBanner,
     .iOtNJw.notistack-MuiContent,
     .bsGOTS {
       color: @base !important;
       background-image: var(--custom-bluemauvered-gradient) !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1472,11 +1470,11 @@
       background-image: unset !important;
       background-color: @accent !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1498,11 +1496,11 @@
       background-color: @red !important;
       border-color: @red !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1521,11 +1519,11 @@
       background-color: @yellow !important;
       border-color: @yellow !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1548,11 +1546,11 @@
       background-color: @peach !important;
       border-color: @peach !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1581,11 +1579,11 @@
       background-color: @green !important;
       border-color: @green !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1602,11 +1600,11 @@
       background-image: var(--custom-green-gradient) !important;
       border-color: @green !important;
 
-      :not(button, button *) {
+      * {
         color: @base !important;
       }
 
-      :not(button) svg {
+      svg, img {
         path, path[fill] {
           fill: @base !important;
         }
@@ -1815,13 +1813,7 @@
     }
 
     // MENU OPEN RING
-    .headerContentContainer
-      .headerContent
-      .right
-      :is(
-        [class*="ChatButton__Container-sc"],
-        .notificationButtonContainer.notificationMenuOpen
-      ) {
+    .headerContentContainer .headerContent .right * {
       outline-color: @accent !important;
     }
 
@@ -1917,7 +1909,8 @@
       color: @base !important;
     }
 
-    // issue with our colours making things hard to see (span, reaction count)
+    // issue with our colours making things hard to see
+    // (reaction count and relevant span)
     .str-chat__message-reaction-count, .cKwqGf {
       font-weight: 600 !important;
     }
@@ -1952,8 +1945,8 @@
       .str-chat__message-textarea-with-emoji-picker
       .str-chat__message-textarea-emoji-picker
       .str-chat__emoji-picker-button
-      svg,
-    .str-chat__message-input .str-chat__file-input-container svg {
+      :is(svg, img),
+    .str-chat__message-input .str-chat__file-input-container :is(svg, img) {
       path, path[fill] {
         fill: @subtext0 !important;
       }
