Push some stuff about toggle buttons and root defaults.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -33,6 +33,10 @@
     #lib.palette();
     #lib.defaults();
 
+    // UPSTREAM ROOT DEFAULTS
+    color: @text;
+    fill: @text;
+
     --custom-bluemauvered-gradient: linear-gradient(
       225deg,
       @blue 0%,
@@ -478,6 +482,26 @@
 
       &:active, &:focus {
         background-color: @surface2 !important;
+      }
+
+      // TOGGLABLE BUTTONS
+      &.selected {
+        background-color: @accent !important;
+        border-color: @accent !important;
+
+        * {
+          color: @base !important;
+        }
+
+        svg, img {
+          path, path[fill] {
+            fill: @base !important;
+          }
+
+          path[stroke] {
+            stroke: @base !important;
+          }
+        }
       }
     }
 
@@ -1462,7 +1486,6 @@
     // ACCENT ELEMENTS
     .jBHjfQ,
     .finishedReviewBlock .reviewBlock .tagsList .tagsListItem,
-    [class*="MyVSONAsSection__GuestContainer-sc"],
     .eyhMkl,
     .bjjDub,
     .fexemQ .badge {
@@ -1616,6 +1639,7 @@
     }
 
     // TRANSLUCENT ELEMENTS
+    [class*="CharacterDiscoveryHeroCard__CharacterContainer-sc"],
     .jTwCSW {
       background-color: fade(@overlay2, 30%) !important;
     }
@@ -1705,6 +1729,12 @@
       }
     }
 
+    [class*="MyVSONAsSection__GuestContainer-sc"] {
+      color: @base !important;
+      background-image: unset !important;
+      background-color: @accent !important;
+    }
+
     // GRADIENT ELEMENTS - MISC.
     .downloadIcon {
       path, path[fill] {
@@ -1715,12 +1745,18 @@
       }
     }
 
+    // VGEN SALE TEXT - DONE THROUGH WEBKIT MASKS
     .saleTimerContainer {
-      background-color: var(--custom-gradient-transparent) !important;
+      background-image: var(--custom-gradient-transparent) !important;
 
       p {
         background-image: var(--custom-bluemauvered-gradient) !important;
       }
+    }
+
+    // VSONA SALE TEXT - DONE THROUGH WEBKIT MASKS
+    .ehVtIi {
+      background-image: var(--custom-bluemauvered-gradient) !important;
     }
 
     .ratingDisplay .icon {
@@ -2449,12 +2485,6 @@
     --theme-ELEVATION-4: 8px 8px 24px rgba(16, 18, 26, 0.5);
     --theme-ELEVATION-4-LIGHT: 8px 8px 24px rgba(16, 18, 26, 0.5);
     --theme-ELEVATION-OUTLINE: 4px 4px 0 rgba(255, 255, 255, 1);
-    --theme-resolveColours: e=>e?u.default.colours:f;
-    --theme-resolveShadows: e=>e?u.default.shadows:c;
-    --theme-breakpoints: [object object];
-    --theme-typography: [object object];
-    --theme-zIndex: [object object];
-    color-scheme: dark;
     color: rgb(255, 255, 255);
     fill: rgb(255, 255, 255);
     --theme-WARNING-NEON: rgba(255, 187, 0, 1);
