fix lint test failing

--- a/styles/tumblr-web/catppuccin.user.less
+++ b/styles/tumblr-web/catppuccin.user.less
@@ -3,7 +3,7 @@
 @namespace github.com/catppuccin/userstyles/styles/tumblr-web
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/tumblr-web
 @version 2000.01.01
-@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/tumblr/catppuccin.user.less
+@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/tumblr-web/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Atumblr-web
 @description Soothing pastel theme for Tumblr Web
 @author Catppuccin
@@ -18,10 +18,6 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
 @-moz-document domain("tumblr.com") {
-  /* This section applies the light/dark themes automatically based on the user's system theme.
-     Use the below example CSS to start if the website you are theming doesn't have a light/dark mode toggle.
-     For an actual example of this, see https://github.com/catppuccin/userstyles/blob/39288b593278e5efa48007d5fc001292cf910672/styles/brave-search/catppuccin.user.css#L16-L29.
-  */
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -29,22 +25,6 @@
     @media (prefers-color-scheme: dark) {
       #catppuccin(@darkFlavor);
     }
-  }
-
-  /* If the website you are theming *does* have a light/dark mode toggle,
-     you can conditionally enable light/dark flavors by targeting whatever
-     attribute that website uses to indicate the theme. *The example below gives you an idea of what
-     to look for. The website you are theming may use a class-based approach (e.g. :root.theme-dark),
-     or any of the myriad of other methods like this.*
-     Use the below example CSS to start if this is the case.
-     For an actual example of this, see https://github.com/catppuccin/userstyles/blob/39288b593278e5efa48007d5fc001292cf910672/styles/youtube/catppuccin.user.css#L21-L30.
-  */
-  */
-  :root[data-theme="dark"] {
-    #catppuccin(@darkFlavor);
-  }
-  :root[data-theme="light"] {
-    #catppuccin(@lightFlavor);
   }
 
   #catppuccin(@flavor) {
@@ -159,7 +139,7 @@
       background-color: @surface1;
     }
     .Dx_DM.WRQyC {
-      border: 2px solid @surface2
+      border-color: @surface2;
     }
     .v6i4P.GZPMx {
       --icon-color-primary: @accent;
@@ -194,11 +174,22 @@
       color: @text;
       background-color: @surface1;
     }
-    .G75qL[data-placement*=bottom]:after {
+    .G75qL[data-placement*="bottom"]::after {
       border-bottom-color: @surface1;
     }
-    .oMP8i[data-placement*=bottom]:after {
+    .oMP8i[data-placement*="bottom"]::after {
       border-bottom-color: @mauve;
+    }
+    /* follow tag tooltip */
+    .YSVS3 {
+      color: @base;
+      background-color: @mauve;
+    }
+    .YSVS3::before {
+      border-color: transparent @mauve @mauve transparent;
+    }
+    .YSVS3::after {
+      border-color: transparent transparent @mauve @mauve;
     }
     /* ... sidebar button */
     .sCA8b {
@@ -210,19 +201,17 @@
     }
     /* text on an image */
     & when (@flavor = latte) {
-      /* ... */
       --image-fg: @base;
       --image-fg-secondary: @mantle;
       .aJgDC {
-        color: @base
+        color: @base;
       }
     }
     & when not(@flavor = latte) {
-      /* ... */
       --image-fg: @text;
       --image-fg-secondary: @subtext1;
       .aJgDC {
-        color: @text
+        color: @text;
       }
     }
   }
