fix: make review suggested changes

--- a/styles/tumblr-web/catppuccin.user.less
+++ b/styles/tumblr-web/catppuccin.user.less
@@ -33,20 +33,20 @@
 
     /* Color Variables */
     --accent: @accent;
-    --accent-tint: rgba(#lib.rgbify(@accent) [], 0.3);
+    --accent-tint: fade(@accent, 30%);
     --secondary-accent: #lib.rgbify(@surface1) [];
     --deprecated-accent: #lib.rgbify(@accent) [];
     --brand-blue: @blue;
-    --brand-blue-tint: rgba(#lib.rgbify(@blue) [], 0.1);
+    --brand-blue-tint: fade(@blue, 10%);
     --brand-red: @red;
-    --brand-red-tint: rgba(#lib.rgbify(@red) [], 0.1);
+    --brand-red-tint: fade(@red, 10%);
     --brand-green: @green;
-    --brand-green-tint: rgba(#lib.rgbify(@green) [], 0.1);
+    --brand-green-tint: fade(@green, 10%);
     --brand-blue-hover: darken(@blue, 5%);
     --brand-red-hover: darken(@red, 5%);
     --brand-green-hover: darken(@green, 5%);
     --brand-purple: @mauve;
-    --brand-purple-tint: rgba(#lib.rgbify(@mauve) [], 0.1);
+    --brand-purple-tint: fade(@mauve, 10%);
     --success: @green;
     --danger: @red;
     --accent-fg: @base;
@@ -65,7 +65,7 @@
     --content-panel: @surface0;
     --content-panel-border: @surface1;
     --content-fg: @text;
-    --content-tint: @surface1;
+    --content-tint: fade(@surface1, 50%);
     --content-tint-strong: @surface2;
     --content-fg-secondary: @subtext0;
     --content-ui-fg: @base;
@@ -119,13 +119,6 @@
     .hAFp3 .KSDLH, .hAFp3 .nwVPE {
       color: @subtext1;
     }
-    /* hovered post header */
-    .DEkbl:hover .mYcfU.YgsXo {
-      background-color: transparent;
-    }
-    .DEkbl:hover {
-      background-color: darken(@surface1, 3%);
-    }
     /* post header ... button */
     .giozV.EF4A5.r21y5:hover {
       background-color: @surface2;
@@ -174,10 +167,10 @@
       color: @text;
       background-color: @surface1;
     }
-    .G75qL[data-placement*="bottom"]::after {
+    .G75qL[data-placement*=bottom]:after {
       border-bottom-color: @surface1;
     }
-    .oMP8i[data-placement*="bottom"]::after {
+    .oMP8i[data-placement*=bottom]:after {
       border-bottom-color: @mauve;
     }
     /* follow tag tooltip */
@@ -185,10 +178,10 @@
       color: @base;
       background-color: @mauve;
     }
-    .YSVS3::before {
+    .YSVS3:before {
       border-color: transparent @mauve @mauve transparent;
     }
-    .YSVS3::after {
+    .YSVS3:after {
       border-color: transparent transparent @mauve @mauve;
     }
     /* ... sidebar button */
