Fix lint test failure again

--- a/styles/tumblr-web/catppuccin.user.less
+++ b/styles/tumblr-web/catppuccin.user.less
@@ -167,10 +167,10 @@
       color: @text;
       background-color: @surface1;
     }
-    .G75qL[data-placement*=bottom]:after {
+    .G75qL[data-placement*="bottom"]::after {
       border-bottom-color: @surface1;
     }
-    .oMP8i[data-placement*=bottom]:after {
+    .oMP8i[data-placement*="bottom"]::after {
       border-bottom-color: @mauve;
     }
     /* follow tag tooltip */
@@ -178,10 +178,10 @@
       color: @base;
       background-color: @mauve;
     }
-    .YSVS3:before {
+    .YSVS3::before {
       border-color: transparent @mauve @mauve transparent;
     }
-    .YSVS3:after {
+    .YSVS3::after {
       border-color: transparent transparent @mauve @mauve;
     }
     /* ... sidebar button */
